feat: retarget test projects and DebugClient to net8.0
Phase 6: Cross-platform test infrastructure:
- Tests.Vpn: net8.0-windows → net8.0
- Tests.Vpn.Service: net8.0-windows → net8.0 with EnableWindowsTargeting
  - AuthenticodeDownloadValidatorTest wrapped in #if WINDOWS
  - AssemblyVersionDownloadValidatorTest marked [Platform("Win")]
  - TelemetryEnricherTest updated for platform-conditional DeviceOs
- Vpn.DebugClient: net8.0-windows → net8.0
  - Platform-conditional connect (Named Pipe vs Unix Socket)
- App.csproj and Tests.App.csproj: added EnableWindowsTargeting

All cross-platform tests pass on Linux:
- Tests.Vpn: 24 passed
- Tests.Vpn.Proto: 9 passed
- Tests.CoderSdk: 8 passed
- Tests.Vpn.Service: 16 passed (Windows-only tests skipped)

--- a/Tests.App/Tests.App.csproj
+++ b/Tests.App/Tests.App.csproj
@@ -4,6 +4,7 @@
         <AssemblyName>Coder.Desktop.Tests.App</AssemblyName>
         <RootNamespace>Coder.Desktop.Tests.App</RootNamespace>
         <TargetFramework>net8.0-windows10.0.19041.0</TargetFramework>
+        <EnableWindowsTargeting>true</EnableWindowsTargeting>
         <LangVersion>preview</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
