App.Linux: use shared service interfaces

--- a/App.Linux/App.Linux.csproj
+++ b/App.Linux/App.Linux.csproj
@@ -8,4 +8,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+
+    <ItemGroup>
+        <ProjectReference Include="..\App.Shared\App.Shared.csproj" />
+    </ItemGroup>
+
 </Project>
