App.Avalonia: add converters and custom controls

--- a/App.Avalonia/App.Avalonia.csproj
+++ b/App.Avalonia/App.Avalonia.csproj
@@ -32,6 +32,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\App.Shared\App.Shared.csproj" />
+    <ProjectReference Include="..\App.Shared\App.Shared.csproj" Aliases="global,AppShared" />
   </ItemGroup>
 </Project>
