App.Avalonia: add window shells + tray icon

--- a/App.Avalonia/App.Avalonia.csproj
+++ b/App.Avalonia/App.Avalonia.csproj
@@ -34,4 +34,8 @@
   <ItemGroup>
     <ProjectReference Include="..\App.Shared\App.Shared.csproj" Aliases="global,AppShared" />
   </ItemGroup>
+
+  <ItemGroup>
+    <AvaloniaResource Include="Assets\\**" />
+  </ItemGroup>
 </Project>
